commit new files

--- a/style.less
+++ b/style.less
@@ -234,6 +234,15 @@ button {
     font-family: @font-family;
     letter-spacing: .1rem;
     cursor: pointer;
+
+    &:hover {
+        opacity: .8;
+    }
+
+    &:active {
+        background-color: @Very-dark-violet;
+        opacity: 1;
+    }
 }
 
 footer {
